--- a/client/src/component/picks/Pick.scss
+++ b/client/src/component/picks/Pick.scss
@@ -8,6 +8,8 @@
 	top: 1rem;
 	height: fit-content;
 	width: 30%;
+
+	// overflow-y: hidden;
 	@include phone() {
 		display: none;
 	}
@@ -38,7 +40,10 @@
 		overflow-y: auto;
 		border-bottom-left-radius: 5px;
 		border-bottom-right-radius: 5px;
-
+		@include phone() {
+			min-height: 100vh;
+			height: fit-content;
+		}
 		&::-webkit-scrollbar {
 			width: 8px;
 		}
