--- a/client/src/component/picks/PickBox.scss
+++ b/client/src/component/picks/PickBox.scss
@@ -89,16 +89,19 @@
 			height: 30px;
 			width: 100%;
 			display: flex;
-			padding: 0 1rem;
+			padding: 0 2rem;
+			justify-content: center;
 			.box {
 				width: fit-content;
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				padding: 0.5rem 0.9rem;
+				width: 30px;
 				p {
 					color: lightslategray;
 					font-size: 0.8rem;
+					font-weight: bold;
 				}
 			}
 			.space {
