--- a/client/src/component/popup/Popup.scss
+++ b/client/src/component/popup/Popup.scss
@@ -1,3 +1,4 @@
+@import '../../styles/mixins.scss';
 .overlay {
 	background-color: #333333;
 	width: 100vw;
@@ -11,20 +12,15 @@
 }
 
 .popup {
-	width: 100%;
-	height: 100vh;
 	position: fixed;
 	z-index: 9999;
 	opacity: 1;
-	top: -2.5rem;
-	left: -0.5rem;
-	padding: 1rem 0;
-	right: 0;
-	bottom: 0;
-	transform: translate(2%, 5%);
+	top: 0;
+	left: 0;
 	border-radius: 5px;
 	overflow-y: scroll;
-	color: black;
+	padding: 1rem 0;
+
 	.header {
 		width: 100%;
 		display: flex;
@@ -33,15 +29,52 @@
 		h1 {
 			font-size: 1.5rem;
 		}
+		button {
+			background: none;
+			border: none;
+			color: rgb(221, 66, 66);
+			font-size: 1.4rem;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
 	}
 	.content {
 		height: 100%;
 		width: 100%;
 		display: flex;
+		@include phone() {
+			flex-direction: column;
+			align-items: center;
+		}
+		.info {
+			display: flex;
+			align-items: center;
+			width: 100%;
+			min-height: 50px;
+			margin-top: 1rem;
+			padding: 0 1rem;
+			color: lightslategray;
+			font-style: italic;
+			font-weight: 600;
+			span {
+				height: 100%;
+				display: flex;
+				align-items: center;
+				margin-left: 0.5rem;
+				font-weight: 600;
+				color: #509beb;
+			}
+		}
+		.predictions-mobile {
+			display: flex;
+			width: 90%;
+			gap: 1rem;
+		}
 		.picks-component {
 			display: flex;
 			width: 100%;
-			height: 100%;
+			min-height: 120vh;
 			.make-picks {
 				height: 100%;
 				border: none;
