--- a/client/src/component/user-pick/UserPick.scss
+++ b/client/src/component/user-pick/UserPick.scss
@@ -37,9 +37,8 @@
 			border-radius: 4px;
 		}
 		img {
-			min-width: 29px;
-			min-height: 29px;
-			max-height: 29px;
+			width: 36px;
+			height: 36px;
 			padding: 0.2rem;
 		}
 		.winner-logo {
