--- a/client/src/component/user/User.scss
+++ b/client/src/component/user/User.scss
@@ -2,11 +2,12 @@
 	width: 100%;
 	height: fit-content;
 	border-radius: 5px;
-
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
 	background: none;
+	display: none;
+
 	font-size: 1.2rem;
 	.header {
 		.name {
