--- a/client/src/component/top-game/Predictions.scss
+++ b/client/src/component/top-game/Predictions.scss
@@ -63,7 +63,7 @@
 						height: 100%;
 					}
 					.loser-percent {
-						background-color: #ff304f;
+						background-color: #e24141;
 						width: 50%;
 						height: 100%;
 					}
