--- a/client/src/component/gamebar/Gamebar.scss
+++ b/client/src/component/gamebar/Gamebar.scss
@@ -8,9 +8,8 @@
 	z-index: 9997;
 	position: relative;
 	margin: 0 auto;
-	width: 1448px;
 	@include laptop() {
-		width: 1248px;
+		width: 1304px;
 	}
 	@include macbook() {
 		max-width: 1100px;
@@ -33,7 +32,7 @@
 	height: 100%;
 	display: flex;
 	justify-content: center;
-	font-size: 1rem;
+	font-size: 0.9rem;
 	text-transform: uppercase;
 	flex-direction: column;
 	font-weight: bold;
@@ -53,13 +52,13 @@
 		display: flex;
 		flex-direction: column;
 		gap: 0.5rem;
-		min-width: 160px;
+		min-width: 150px;
 		padding: 0.2rem 1rem;
 		// display: none;
 
 		max-width: 160px;
 		.status {
-			font-size: 0.8rem;
+			font-size: 0.7rem;
 		}
 		.home,
 		.away {
@@ -80,10 +79,12 @@
 			.name {
 				width: 30%;
 				font-weight: 600;
+				font-size: 0.9rem;
 			}
 			.score,
 			.record {
 				margin-left: auto;
+				font-size: 0.9rem;
 			}
 			.score {
 				width: 10%;
@@ -91,6 +92,7 @@
 			.record {
 				font-size: 0.7rem;
 				margin-right: auto;
+				color: lightslategray;
 			}
 		}
 	}
