--- a/client/src/component/navbar/Navbar.scss
+++ b/client/src/component/navbar/Navbar.scss
@@ -1,6 +1,6 @@
 @import '../../styles/mixins.scss';
 .navbar {
-	height: 65px;
+	height: 58px;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -9,13 +9,13 @@
 	z-index: 9999;
 	padding: var(--padding);
 	.nav-content {
-		width: 1448px;
+		width: 1548px;
 		position: relative;
 		margin: 0 auto;
 		display: flex;
 		align-items: center;
 		@include laptop() {
-			width: 1248px;
+			width: 1304px;
 		}
 		@include macbook() {
 			max-width: 1100px;
@@ -29,14 +29,14 @@
 			text-decoration: none;
 			gap: 0.5rem;
 			img {
-				max-width: 40px;
+				max-width: 36px;
 			}
 		}
 	}
 	.links {
 		display: flex;
 		align-items: center;
-		gap: 1rem;
+		gap: 0.5rem;
 		width: 100%;
 		padding-left: 2rem;
 		@include phone() {
@@ -46,10 +46,11 @@
 			list-style-type: none;
 			a {
 				text-decoration: none;
-				padding: 0.75rem 1rem;
+				padding: 0.62rem 0.96rem;
 				border-radius: 5px;
 				box-shadow: none;
 				font-weight: 600;
+				font-size: 0.9rem;
 			}
 			a.active {
 			}
@@ -64,7 +65,7 @@
 			display: none;
 		}
 		.user-icon {
-			font-size: 1.5rem;
+			font-size: 1.4rem;
 			cursor: pointer;
 		}
 	}
@@ -92,8 +93,8 @@
 		display: flex;
 		align-items: center;
 		border: none;
-		width: 110px;
-		padding: 0.5rem 1rem;
+		width: 90px;
+		padding: 0.5rem;
 		justify-content: center;
 		font-size: 1rem;
 		margin-right: 1rem;
@@ -104,8 +105,8 @@
 		}
 	}
 	.pill {
-		min-width: 52px;
-		height: 23px;
+		min-width: 44px;
+		height: 20px;
 		border-radius: 25px;
 		display: flex;
 		align-items: center;
@@ -124,7 +125,7 @@
 			transition: all 200ms ease-in-out;
 		}
 		.toggle-switch-off {
-			transform: translate(29px);
+			transform: translate(22px);
 		}
 	}
 	.burger {
