--- a/client/src/component/picks/Pick.scss
+++ b/client/src/component/picks/Pick.scss
@@ -48,19 +48,15 @@
 			width: 8px;
 		}
 
-		/* Track */
-		&::-webkit-scrollbar-track {
-			background: #313131;
-		}
-
 		/* Handle */
 		&::-webkit-scrollbar-thumb {
-			background: #888;
+			background: lightslategray;
+			border-radius: 4px;
 		}
 
 		/* Handle on hover */
 		&::-webkit-scrollbar-thumb:hover {
-			background: #555;
+			background: slategray;
 		}
 		.add-btn {
 			position: absolute;
@@ -95,6 +91,7 @@
 		flex-direction: column;
 		gap: 1rem;
 		height: fit-content;
+		font-size: 0.9rem;
 		.btn-container {
 			display: flex;
 			gap: 1rem;
@@ -104,9 +101,9 @@
 				margin-right: auto;
 			}
 			.delete {
-				background-color: #ee5a5a;
+				background-color: #e24141;
 				&:hover {
-					background-color: darken($color: #ee5a5a, $amount: 10);
+					background-color: darken($color: #e24141, $amount: 10);
 				}
 			}
 		}
@@ -119,7 +116,7 @@
 
 	.missed-picks {
 		p {
-			color: #ee5a5a;
+			color: #e24141;
 			font-weight: 600;
 		}
 	}
