--- a/client/src/component/user-pick/UserPick.scss
+++ b/client/src/component/user-pick/UserPick.scss
@@ -14,7 +14,7 @@
 	}
 	h2 {
 		margin-right: 2rem;
-		font-size: 1rem;
+		font-size: 0.9rem;
 		width: 100px;
 	}
 	.picks {
@@ -27,9 +27,8 @@
 		justify-content: space-around;
 		.no-pick-logo {
 			outline: 2px solid #727477;
-			min-width: 29px;
-			min-height: 29px;
-			max-height: 29px;
+			min-width: 38px;
+			height: 38px;
 			padding: 0.2rem;
 			display: flex;
 			align-items: center;
@@ -37,20 +36,18 @@
 			border-radius: 4px;
 		}
 		img {
-			width: 36px;
-			height: 36px;
-			padding: 0.2rem;
+			min-width: 35px;
+			max-width: 35px;
+			height: 35px;
+			padding: 0.4rem;
 		}
 		.winner-logo {
 			outline: 2px solid #22eaaa;
 			border-radius: 4px;
 		}
 		.loser-logo {
-			outline: 2px solid #ff304f;
+			outline: 2px solid #e24141;
 			border-radius: 4px;
-		}
-		.logo {
-			// border: 1px solid lime;
 		}
 	}
 
