--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -5,6 +5,9 @@
 	max-height: 100%;
 	position: relative;
 	padding: var(--padding);
+	display: flex;
+	flex-direction: column;
+	gap: 4rem;
 	@include phone() {
 		overflow-x: hidden;
 	}
@@ -78,7 +81,7 @@
 			margin-left: auto;
 			position: absolute;
 			right: 8rem;
-			top: 2rem;
+			top: 8rem;
 			@include phone() {
 				display: none;
 			}
@@ -155,6 +158,58 @@
 					img {
 						left: 8px;
 					}
+				}
+			}
+		}
+	}
+	.how-to-play {
+		width: 1448px;
+		height: fit-content;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		@include phone() {
+			max-width: 100%;
+			overflow-x: hidden;
+			display: flex;
+			height: 100vh;
+		}
+		@include laptop() {
+			width: 1248px;
+		}
+		@include macbook() {
+			width: 1140px;
+		}
+		.wrapper {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			gap: 1rem;
+			justify-content: space-evenly;
+			.how-to-box {
+				width: calc(1448px / 3);
+				height: fit-content;
+				padding: 1rem;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				gap: 1rem;
+				span {
+					background-color: #6795de;
+					font-size: 2rem;
+					padding: 1rem;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					border-radius: 50%;
+					width: 50px;
+					height: 50px;
+					color: white;
+				}
+				p {
+					font-size: 1.2rem;
 				}
 			}
 		}
